tests/ui/opts/plain_params_arg.stderr
error: unexpected end of input, expected parentheses
 --> tests/ui/opts/plain_params_arg.rs:4:17
  |
4 | #[funcmap(params)]
  |                 ^
